--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
           <a class="navbar-brand" href="#">
             Steem Dash - A Dashboard for Steem!
           </a>
+
+          <ul class="nav navbar-nav" style="margin-left: 30px;">
+            <li><a href="javascript:void(0);" style="font-size: 1.5em;"><div id="steem_price_container">STEEM - $<span id="steem_price">loading...</span></div></a></li>
+            <li><a href="javascript:void(0);" style="font-size: 1.5em;"><div id="sbd_price_container">SBD - $<span id="sbd_price">loading...</span></div></a></li>
+          </ul>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
@@ -54,12 +59,28 @@
                   <td><span id="sp" class="">Loading...</span></td>
                 </tr>
                 <tr>
+                  <td>RECEIVED SP:</td>
+                  <td><span id="sp_received" class="">Loading...</span></td>
+                </tr>
+                <tr>
+                  <td>DELEGATED SP:</td>
+                  <td><span id="sp_delegated" class="">Loading...</span></td>
+                </tr>
+                <tr>
+                  <td>VOTING WEIGHT:</td>
+                  <td><span id="sp_voting" class="">Loading...</span></td>
+                </tr>
+                <tr>
                   <td>VOTING POWER:</td>
                   <td>
                     <div class="progress" id="vp">
                       <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
                     </div>
                   </td>
+                </tr>
+                <tr>
+                  <td>VOTE VALUE:</td>
+                  <td><span style="font-size: 1.5rem;">$</span>&nbsp;<span id="vote_value" class="">Loading...</span></td>
                 </tr>
                 <tr>
                   <td>STEEM:</td>
