Fixed a sizing issue

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       .progress { margin-bottom: 0px; }
       .transaction { padding: 2px 4px; }
       .memo { background-color: #f9f2f4; color: #c7254e; border-radius: 4px; padding: 2px 4px; }
+
+      @media (min-width: 1200px) {
+        .container {
+            width: 1270px;
+        }
+      }
     </style>
   </head>
   <body>
